# treehole_next

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  apis.go  db.go  go.mod  go.sum  main.go  routes.go  test.bat
apis/: default.go  (+6 more)
python_sdk/: .gitignore  README.md  gen_sdk.sh  pyproject.toml
python_sdk/open_tree_hole_client/: __init__.py
python_sdk/open_tree_hole_client/api/default/: get.py
python_sdk/open_tree_hole_client/models/: __init__.py  common_error_detail_element.py  common_error_detail_element_value.py  common_http_error.py  division_create_model.py  division_delete_model.py  division_modify_division_model.py  favourite_add_favorite_group_model.py  favourite_add_model.py  favourite_delete_favorite_group_model.py  favourite_delete_model.py  favourite_modify_favorite_group_model.py  favourite_modify_model.py  favourite_move_model.py  favourite_response.py  floor_ban_division.py  floor_create_model.py  floor_create_old_model.py  floor_create_old_response.py  floor_delete_model.py  floor_modify_model.py  floor_modify_model_like.py  floor_modify_sensitive_floor_request.py  floor_restore_model.py  floor_search_config_model.py  floor_sensitive_floor_response.py  get_floors_sensitive_order_by.py  get_holes_hole_id_floors_order_by.py  get_holes_hole_id_floors_sort.py  get_reports_range.py  get_reports_sort.py  get_user_favorite_groups_order.py  get_user_favorites_order.py  get_users_me_floors_order_by.py  get_users_me_floors_sort.py  gorm_deleted_at.py  hole_create_model.py  hole_create_old_model.py  hole_create_old_response.py  hole_modify_model.py  (+33 more)
(+220 files in other folders)
